[Polyam] Fix contrast in notification request badge
Port 0b9d4103cb5502faee4cc61717aa5454f63bc8f5 to polyam-glitch

--- a/app/javascript/flavours/polyam/styles/components/columns.scss
+++ b/app/javascript/flavours/polyam/styles/components/columns.scss
@@ -1708,9 +1708,10 @@ $ui-header-logo-wordmark-width: 99px;
     }
 
     .filtered-notifications-banner__badge {
-      background-color: $highlight-text-color;
+      background: $ui-button-background-color;
       border-radius: 4px;
       padding: 1px 6px;
+      color: $white;
     }
   }
 
